@@ -1,20 +1,22 @@
-3f3cd8135fff5c6ded2d3a8fa435a4b6 *DESCRIPTION
+6d31847a93edb58765dff1f97ba34167 *DESCRIPTION
 8fb901e082886307dd5034f719f0e264 *NAMESPACE
-fb705f1665fbb70f42c68b8d477f076f *NEWS
+ab0e89575d651028a28d85d158e539cc *NEWS
 30b50577e4d58a2a5b6f240e9256e50d *R/MUKEYS_by_ll_bbox.R
 d9f3365d763e8603af54f2510996085b *R/SDA_query.R
-9e90fc71b79d319cc9e99a0d25b59115 *R/fetchNASIS.R
+64c8355887c85c221147b38dd51c7c33 *R/fetchNASIS.R
+fa2946511ae8822adcb878ba983b8e68 *R/fetchOSD.R
 5f2e9c802ccf829f900cb86920a9b33c *R/fetchPedonPC.R
 ae55807ded194771b84866c1755931ca *R/getHzErrorsNASIS.R
 9c44ed945e0563ab6b348722dde22aa0 *R/getHzErrorsPedonPC.R
 93a52d67a8d399dd3d68a62e29041593 *R/get_colors_from_NASIS_db.R
 b54060661e47bd87c6deca500bd5c24b *R/get_colors_from_pedon_db.R
-d5ad769fb277b60a8c79f60e1fe80686 *R/get_extended_data_from_NASIS_db.R
-91b2e225a41d2ba068a10bffe9777d4d *R/get_extended_data_from_pedon_db.R
-6075b3362ce007469a5f3a4a3caef1f6 *R/get_hz_data_from_NASIS_db.R
-4bdf6fdde322d64b48204111a729a981 *R/get_hz_data_from_pedon_db.R
-621e133f2e038d6915786c327b7d2924 *R/get_site_data_from_NASIS_db.R
+afaef28ef49a9ddd2cb3e767def21723 *R/get_extended_data_from_NASIS_db.R
+61df778d6ff3426e8a53f964674a4eb2 *R/get_extended_data_from_pedon_db.R
+80c10aa2a2132c89f9c82f090c328084 *R/get_hz_data_from_NASIS_db.R
+1bbdfc3dfa71f2204cfc30736b79b98b *R/get_hz_data_from_pedon_db.R
+56f94bf901e86d5cdf4971c2aad706a1 *R/get_site_data_from_NASIS_db.R
 6e0e9756e116e4567f934d19f10ec01f *R/get_site_data_from_pedon_db.R
+71da177d41998c93dcd884a0acc9a1ce *R/get_text_notes_from_NASIS_db.R
 e87a6708e2183638346a54e14b1f9293 *R/get_veg_from_AK_Site.R
 c04d9545eb615439833dc98180341f72 *R/get_veg_from_MT_veg_db.R
 dc9888fd938a0e5ba7900c5ee30fdcd2 *R/get_veg_other_from_MT_veg_db.R
@@ -24,18 +26,19 @@ b64c690001a00e41c856dcabd2b0148e *R/get_veg_species_from_MT_veg_db.R
 fc95727e2e32b5b1f1d335f0307ffe4a *R/nasis_component_data.R
 d3f0e9d380dc1d0cae7bcd31db733176 *R/seriesExtent.R
 ed93cf2427cc7ac78c586d530875295d *R/utils.R
-5a28306413232439024c10583837c679 *TODO
-0aecb0d9781b61c2075b417f3298fdba *data/andic.subset.rda
-92c1a690016a2be990598f0150d31c48 *data/cisne.rda
-89caa5f8fe599e79e8996c75a652d545 *data/gopheridge.rda
-a42b24a827c28751f51294e5db3810cc *data/loafercreek.rda
+57bfcb8da3ef6cf17285e86773100d81 *TODO
+195ce96f24f6c2fd6dece368efa06c95 *data/andic.subset.rda
+2ca8864c31d9c7fad211e3f793183051 *data/cisne.rda
+20b0c780d984ff3d7b02dd994c5fe7fd *data/gopheridge.rda
+d78759e015b9d3b35244d9719bf8312f *data/loafercreek.rda
 833db3b86734ac9732316c66fad57574 *man/MUKEYS_by_ll_bbox.Rd
 008a97a97da5e84e290ef58928aa91c6 *man/SDA_query.Rd
-2f775333dc1639bff96aa1523f2f4290 *man/fetchNASIS.Rd
+d57bec380a0af536eaad6afd9e253a68 *man/fetchNASIS.Rd
+e048d919498f87e47d5ed189a909ac22 *man/fetchOSD.Rd
 2d191a7b730056acaca2f6ca2d22ad35 *man/fetchPedonPC.Rd
 cc59a1ac16822a1370bf42980bac08b4 *man/get_colors_from_NASIS_db.Rd
 1f7bf9e5f479ea0a55662769f371f99b *man/get_colors_from_pedon_db.Rd
-376ff8d63a83541d5d384b2e7fb55288 *man/get_extended_data_from_NASIS_db.Rd
+b08e97b16d37ae739067d2b3bad03b5b *man/get_extended_data_from_NASIS_db.Rd
 798eb64b260ec0e28635a84f13b3091a *man/get_extended_data_from_pedon_db.Rd
 78f1b63221f4d48b03ef142ba1bc8f7b *man/get_hz_data_from_NASIS_db.Rd
 9b7ab3bf0a9cdccb7d08df38bc01da9f *man/get_hz_data_from_pedon_db.Rd
