@@ -1,3 +1,11 @@
+-------------------------- soilDB 0.9-6 (2013-02-26) ----------------------------
+* new function get_text_notes_from_NASIS_db() -- still needs proper documentation
+* bug fixes to PedonPC and NASIS queries, new data elements returned by extended query functions
+* SoilWeb queries via URL are now URL-encoded to allow for spaces in soil series names
+
+-------------------------- soilDB 0.9-4 (2013-01-31) ----------------------------
+* new function: fetchOSD() returns basic OSD data as a SoilProfileCollection
+
 -------------------------- soilDB 0.9-3 (2013-01-08) ----------------------------
 * speed-bump in color-fetching functions from NASIS/pedonPC
 * fetchNASIS() now attempts to correct for >1 pedon/site by appending peiid to pedon_id
